--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <div class="jumbotron">
     </div>
 
+    <footer class='page-footer font-small blue pt-4'>
+      <div class='footer-copyright text-center py-3' style="color: white;">&#169; 2021 Copyright: Shiro Wiki
+      </div>
+    </footer>
 
     <script crossorigin='anonymous' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' src='https://code.jquery.com/jquery-3.4.1.slim.min.js'/>
     <script crossorigin='anonymous' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'/>
