--- a/index.html
+++ b/index.html
@@ -1,49 +1,36 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="css/main.css" rel="stylesheet">
-    <meta charset='utf-8'/>
-    <meta content='width=device-width, initial-scale=1, shrink-to-fit=yes' name='viewport'/>
-    <link crossorigin='anonymous' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' rel='stylesheet'/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Shiro Wiki</title>
   </head>
-  <style>
-    body {
-      background-color: black;
-    } 
-  </style>
-  <body>
+  <body id="page-top">
 
-    <nav class='navbar navbar-expand-lg navbar-dark bg-transparent fixed-top' id='mainNav'>
-      <div class='container'>
-      <a class='navbar-brand text-white font-weight-bold' href='#page-top' style='text-shadow: 0px 0px 5px #000000;'>Shiro Wiki</a>
-      <button aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation' class='navbar-toggler navbar-toggler-right' data-target='#navbarSupportedContent' data-toggle='collapse' type='button'>
-        <span class='navbar-toggler-icon'/>
-      </button>
-      <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-        <ul class='navbar-nav ml-auto'>
-          <li class="nav-item active">
-            <a class="nav-link" href="#" style='text-shadow: 0px 0px 5px #000000;'>Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Programming</a>
-          </li>
-        </ul>
-      </div>
-      </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top">Shiro Wiki</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                <a class="nav-link js-scroll-trigger" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link js-scroll-trigger"" href="#">Programming</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+      </nav>
 
-    <div class="jumbotron">
-    </div>
-
-    <footer class='page-footer font-small blue pt-4'>
-      <div class='footer-copyright text-center py-3' style="color: white;">&#169; 2021 Copyright: Shiro Wiki
-      </div>
-    </footer>
-
-    <script crossorigin='anonymous' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' src='https://code.jquery.com/jquery-3.4.1.slim.min.js'/>
-    <script crossorigin='anonymous' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'/>
-    <script crossorigin='anonymous' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js'/>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
   </body>
 </html>
