--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Shiro Wiki</title>
   </head>
   <body id="page-top">
-
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Shiro Wiki</a>
@@ -18,15 +18,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link js-scroll-trigger"" href="#">Programming</a>
+                <a class="nav-link js-scroll-trigger" href="#programming">Programming</a>
                 </li>
             </ul>
             </div>
         </div>
-      </nav>
+    </nav>
+
+    <div class="home-content">
+        Shiro Wiki
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
