--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </nav>
 
     <div class="home-content">
-        Shiro Wiki
+        <h1 style="text-shadow: 2px 2px 4px #000000;">Shiro Wiki</h1>
+        <h5 style="text-shadow: 2px 2px 4px #000000;">wiki for store knowledge</h5>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
