--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="home-content">
         <h1 style="text-shadow: 2px 2px 4px #000000;">Shiro Wiki</h1>
-        <h5 style="text-shadow: 2px 2px 4px #000000;">wiki for store knowledge</h5>
+        <h5 style="text-shadow: 2px 2px 4px #000000;">Wiki for store knowledge</h5>
     </div>
 
     <div class="home-footer">
