--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div class="home-footer">
-        <img src="images/csharp128.png" width=50vh/>
-        <img src="images/c++128.png" width=50vh/>
-        <img src="images/java128.png" width=50vh/>
+        <img src="images/csharp128.png" width=50px/>
+        <img src="images/c++128.png" width=50px/>
+        <img src="images/java128.png" width=50px/>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
