--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
                 <li class="nav-item active">
                 <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#programming">Programming</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Programming
+                    </a>
+                    <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
+                      <a class="dropdown-item" style="color: white;" href="#c++ win32">C++ Win32</a>
+                      <div class="dropdown-divider" style="color: white;"></div>
+                      <a class="dropdown-item" style="color: white;" href="#java">Java</a>
+                    </div>
+                  </li>
             </ul>
             </div>
         </div>
