--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script type="module" src="https://unpkg.com/@deckdeckgo/highlight-code@latest/dist/deckdeckgo-highlight-code/deckdeckgo-highlight-code.esm.js"></script>
     <title>Shiro Wiki</title>
   </head>
+  <style>
+      body {
+          background-color: rgb(53, 49, 61);
+      }
+  </style>
   <body id="page-top">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
@@ -25,7 +30,7 @@
                     <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Programming
                     </a>
-                    <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
                       <a class="dropdown-item" style="color: white;" href="#c++ win32">C++ Win32</a>
                       <div class="dropdown-divider" style="color: white;"></div>
