--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </a>
                     <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
-                      <a class="dropdown-item" href="knowledge/cpp-win32/cpp-win32.html" style="color: white;" href="#c++ win32">C++ Win32</a>
+                      <a class="dropdown-item" style="color: white;" href="#c++ win32">C++ Win32</a>
                       <div class="dropdown-divider" style="color: white;"></div>
                       <a class="dropdown-item" style="color: white;" href="#java">Java</a>
                     </div>
@@ -67,7 +67,10 @@ int main(){
         </deckgo-highlight-code>
     </div>
 -->
+<!--
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+-->
+    <script src="js/jquery-3.5.1-slim-min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
