--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -1,24 +1,128 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="../../css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../css/bootstrap-4.6.0.min.css">
-    <script type="module" src="../../js/deckdeckgo-highlight-code.esm.js"></script>
-    <title>Shiro Wiki</title>
-  </head>
-  <style>
-      body {
-          background-color: rgb(53, 49, 61);
-      }
-  </style>
-  <body id="page-top">
-    
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/43/24/lwTb0a.jpg");
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
 
-    <script src="../../js/jquery-3.5.1.slim.min.js"></script>
-    <script src="../../js/popper-1.16.1.min.js"></script>
-    <script src="../../js/bootstrap-4.6.0.min.js"></script>
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(163, 163, 163, 0.5);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 30px;
+}
 
-  </body>
-</html>
+.sidebar .header {
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  font-size: 30px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
+  padding-bottom:30px;
+}
+
+.sidebar .part {
+  padding: 3px 2px 3px 16px;
+  text-decoration: none;
+  font-size: 30px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a {
+  padding: 3px 2px 3px 24px;
+  text-decoration: none;
+  font-size: 17px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  background-color: rgba(163, 163, 163, 0.4);
+}
+
+.openbtn {
+  border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: rgba(163, 163, 163, 0.5);
+  color: white;
+  padding: 10px 15px;
+}
+
+.openbtn:hover {
+  background-color: rgba(163, 163, 163, 0.4);
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+</style>
+</head>
+<body>
+
+<div id="mySidebar" class="sidebar">
+  <div class="part">Control</div>
+  <a href="#">Button</a>
+  <a href="#">ComboBox</a>
+  <a href="#">Label</a>
+  <a href="#">TextBox</a>
+  <br>
+  <div class="part">Text</div>
+  <a href="#">Align</a>
+  <a href="#">Font</a>
+  <a href="#">Size</a>
+  <br>
+</div>
+
+<div id="main">
+  <button id="toggleNavbar" class="openbtn" onclick="toggleNav()" value="open">☰</button>  
+</div>
+
+<script>
+function toggleNav(){
+    var x = document.getElementById("toggleNavbar");
+    if (x.value == "close"){
+        openNav();
+        x.value = "open";
+    } else {
+        closeNav();
+        x.value = "close";
+    }
+}
+function openNav() {
+    document.getElementById("mySidebar").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+}
+function closeNav() {
+    document.getElementById("mySidebar").style.width = "0";
+    document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+   
+</body>
+</html> 
