--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -100,7 +100,7 @@ body {
 </div>
 
 <div id="main">
-  <button id="toggleNavbar" class="openbtn" onclick="toggleNav()" value="open">☰</button>  
+  <button id="toggleNavbar" class="openbtn" onclick="toggleNav()" value="close">☰</button>  
 </div>
 
 <script>
