--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -87,15 +87,19 @@ body {
 
 <div id="mySidebar" class="sidebar">
   <div class="part">Control</div>
-  <a href="#">Button</a>
-  <a href="#">ComboBox</a>
-  <a href="#">Label</a>
-  <a href="#">TextBox</a>
+  <a href="#">・Button</a>
+  <a href="#">・CheckBox「Button」</a>
+  <a href="#">・ComboBox</a>
+  <a href="#">・Label「Static」</a>
+  <a href="#">・ListBox</a>
+  <a href="#">・PasswordBox「Edit」</a>
+  <a href="#">・RadioButton「Button」</a>
+  <a href="#">・TextBox「Edit」</a>
   <br>
   <div class="part">Text</div>
-  <a href="#">Align</a>
-  <a href="#">Font</a>
-  <a href="#">Size</a>
+  <a href="#">・Align</a>
+  <a href="#">・Font</a>
+  <a href="#">・Size</a>
   <br>
 </div>
 
