--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -88,13 +88,13 @@ body {
 <div id="mySidebar" class="sidebar">
   <div class="part">Control</div>
   <a href="#">・Button</a>
-  <a href="#">・CheckBox「Button」</a>
+  <a href="#">・CheckBox</a>
   <a href="#">・ComboBox</a>
-  <a href="#">・Label「Static」</a>
+  <a href="#">・Label</a>
   <a href="#">・ListBox</a>
-  <a href="#">・PasswordBox「Edit」</a>
-  <a href="#">・RadioButton「Button」</a>
-  <a href="#">・TextBox「Edit」</a>
+  <a href="#">・PasswordBox</a>
+  <a href="#">・RadioButton</a>
+  <a href="#">・TextBox</a>
   <br>
   <div class="part">Text</div>
   <a href="#">・Align</a>
