--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li class="nav-item active">
                 <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#app">App</a>
+                    </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Programming
