--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -1,156 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: "Segoe UI", Arial, sans-serif;
-  background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/43/24/lwTb0a.jpg");
-	background-attachment: fixed;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-h1,h2,h3,h4,h5,h6,h7 {
-  color:white;
-  text-shadow: 2px 2px 4px #000000;
-}
-
-.sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgba(163, 163, 163, 0.5);
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 30px;
-}
-
-.sidebar .header {
-  text-decoration: none;
-  font-weight: bold;
-  text-align: center;
-  font-size: 30px;
-  color: #ffffff;
-  display: block;
-  transition: 0.3s;
-  padding-bottom:30px;
-}
-
-.sidebar .part {
-  padding: 3px 2px 3px 16px;
-  text-decoration: none;
-  font-size: 30px;
-  color: #ffffff;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidebar a {
-  padding: 3px 2px 3px 24px;
-  text-decoration: none;
-  font-size: 17px;
-  color: #ffffff;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidebar a:hover {
-  background-color: rgba(163, 163, 163, 0.4);
-}
-
-.openbtn {
-  border-radius: 10px;
-  font-size: 20px;
-  cursor: pointer;
-  background-color: rgba(163, 163, 163, 0.5);
-  color: white;
-  padding: 10px 15px;
-}
-
-.openbtn:hover {
-  background-color: rgba(163, 163, 163, 0.4);
-}
-
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-</style>
-</head>
+  <head>
+    <link href="style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <body>
 
-<div id="main">
-  <button id="toggleNavbar" class="openbtn" onclick="toggleNav()" value="close">☰ C++ Win32</button>  
-  <div id="c_title"><h1>C++ Win32</h1></div>
-  <hr>
-</div>
+  <div id="main">
+    <button id="toggleNavbar" class="openbtn" onclick="toggleNav()" value="close">☰ C++ Win32</button>  
+    <div id="c_title"><h1>C++ Win32</h1></div>
+    <hr>
+  </div>
 
-<div id="mySidebar" class="sidebar">
-  <div class="part">Control</div>
-  <a href="javascript:Change_Title('c_title','Control - Button')">・Button</a>
-  <a href="javascript:Change_Title('c_title','Control - CheckBox')">・CheckBox</a>
-  <a href="javascript:Change_Title('c_title','Control - ComboBox')">・ComboBox</a>
-  <a href="javascript:Change_Title('c_title','Control - Label')">・Label</a>
-  <a href="javascript:Change_Title('c_title','Control - ListBox')">・ListBox</a>
-  <a href="javascript:Change_Title('c_title','Control - PasswordBox')">・PasswordBox</a>
-  <a href="javascript:Change_Title('c_title','Control - RadioButton')">・RadioButton</a>
-  <a href="javascript:Change_Title('c_title','Control - TextBox')">・TextBox</a>
-  <div class="part">Text</div>
-  <a href="javascript:Change_Title('c_title','Text - Align')">・Align</a>
-  <a href="javascript:Change_Title('c_title','Text - Font')">・Font</a>
-  <a href="javascript:Change_Title('c_title','Text - Size')">・Size</a>
-  <div class="part">Window</div>
-  <a href="javascript:Change_Title('c_title','Window - Create')">・Create</a>
-</div>
+  <div id="mySidebar" class="sidebar">
+    <div class="part">Control</div>
+    <a href="javascript:Change_Title('c_title','Control - Button')">・Button</a>
+    <a href="javascript:Change_Title('c_title','Control - CheckBox')">・CheckBox</a>
+    <a href="javascript:Change_Title('c_title','Control - ComboBox')">・ComboBox</a>
+    <a href="javascript:Change_Title('c_title','Control - Label')">・Label</a>
+    <a href="javascript:Change_Title('c_title','Control - ListBox')">・ListBox</a>
+    <a href="javascript:Change_Title('c_title','Control - PasswordBox')">・PasswordBox</a>
+    <a href="javascript:Change_Title('c_title','Control - RadioButton')">・RadioButton</a>
+    <a href="javascript:Change_Title('c_title','Control - TextBox')">・TextBox</a>
+    <div class="part">Text</div>
+    <a href="javascript:Change_Title('c_title','Text - Align')">・Align</a>
+    <a href="javascript:Change_Title('c_title','Text - Font')">・Font</a>
+    <a href="javascript:Change_Title('c_title','Text - Size')">・Size</a>
+    <div class="part">Window</div>
+    <a href="javascript:Change_Title('c_title','Window - Create')">・Create</a>
+  </div>
 
-
-
-<script>
-function CElement(_element, _content, _div){
-  var x = document.createElement(_element);
-  x.innerHTML = _content;
-  document.getElementById(_div).appendChild(x);
-}
-function ClearDiv(id){
-    document.getElementById(id).innerHTML = "";
-}   
-function Change_Title(id,title){
-    ClearDiv(id);
-    CElement('h1',title,id);
-}
-</script>
-
-<script>
-function toggleNav(){
-    var x = document.getElementById("toggleNavbar");
-    if (x.value == "close"){
-        openNav();
-        x.value = "open";
-    } else {
-        closeNav();
-        x.value = "close";
-    }
-}
-function openNav() {
-    document.getElementById("mySidebar").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-}
-function closeNav() {
-    document.getElementById("mySidebar").style.width = "0";
-    document.getElementById("main").style.marginLeft= "0";
-}
-</script>
+  <script src="content.js"></script>
+  <script src="nav.js"></script>
    
-</body>
+  </body>
 </html> 
