--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -31,42 +31,42 @@
   <div id="mySidebar" class="sidebar">
     <div class="part">Control</div>
         <a href="javascript:ChangeTitle('c_title','Control - Button');
-                javascript:code_control('Button','code1');">
+                javascript:CodeBox('Button','code1');">
           ・Button</a>
         <a href="javascript:ChangeTitle('c_title','Control - CheckBox');
-                javascript:code_control('CheckBox','code1');">
+                javascript:CodeBox('CheckBox','code1');">
           ・CheckBox</a>
         <a href="javascript:ChangeTitle('c_title','Control - ComboBox');
-                javascript:code_control('ComboBox','code1');">
+                javascript:CodeBox('ComboBox','code1');">
           ・ComboBox</a>
         <a href="javascript:ChangeTitle('c_title','Control - Label');
-                javascript:code_control('Label','code1');">
+                javascript:CodeBox('Label','code1');">
           ・Label</a>
         <a href="javascript:ChangeTitle('c_title','Control - ListBox');
-                javascript:code_control('ListBox','code1');">
+                javascript:CodeBox('ListBox','code1');">
           ・ListBox</a>
         <a href="javascript:ChangeTitle('c_title','Control - PasswordBox');
-                javascript:code_control('PasswordBox','code1');">
+                javascript:CodeBox('PasswordBox','code1');">
           ・PasswordBox</a>
         <a href="javascript:ChangeTitle('c_title','Control - RadioButton');
-                javascript:code_control('RadioButton','code1');">
+                javascript:CodeBox('RadioButton','code1');">
           ・RadioButton</a>
         <a href="javascript:ChangeTitle('c_title','Control - TextBox');
-                javascript:code_control('TextBox','code1');">
+                javascript:CodeBox('TextBox','code1');">
           ・TextBox</a>
     <div class="part">Text</div>
         <a href="javascript:ChangeTitle('c_title','Text - Align');
-                javascript:code_control('Align','code1');">
+                javascript:CodeBox('Align','code1');">
           ・Align</a>
         <a href="javascript:ChangeTitle('c_title','Text - Font');
-                javascript:code_control('Font','code1');">
+                javascript:CodeBox('Font','code1');">
           ・Font</a>
         <a href="javascript:ChangeTitle('c_title','Text - Size');
-                javascript:code_control('Size','code1');">
+                javascript:CodeBox('Size','code1');">
           ・Size</a>
     <div class="part">Window</div>
         <a href="javascript:ChangeTitle('c_title','Window - Create');
-                javascript:code_control('Create','code1');">
+                javascript:CodeBox('Create','code1');">
           ・Create</a> 
   </div>
 
