--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -24,49 +24,39 @@
       </tr>
     </table> 
     <hr>
-      <div id="code1">
+      <div id="_box1">
+      </div>
+      <div id="_box2">
       </div>
   </div>
 
   <div id="mySidebar" class="sidebar">
     <div class="part">Control</div>
-        <a href="javascript:ChangeTitle('c_title','Control - Button');
-                javascript:CodeBox('Button','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - Button');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Button','_box2');">
           ・Button</a>
-        <a href="javascript:ChangeTitle('c_title','Control - CheckBox');
-                javascript:CodeBox('CheckBox','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - CheckBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('CheckBox','_box2');">
           ・CheckBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - ComboBox');
-                javascript:CodeBox('ComboBox','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - ComboBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('ComboBox','_box2');">
           ・ComboBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - Label');
-                javascript:CodeBox('Label','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - Label');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Label','_box2');">
           ・Label</a>
-        <a href="javascript:ChangeTitle('c_title','Control - ListBox');
-                javascript:CodeBox('ListBox','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - ListBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('ListBox','_box2');">
           ・ListBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - PasswordBox');
-                javascript:CodeBox('PasswordBox','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - PasswordBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('PasswordBox','_box2');">
           ・PasswordBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - RadioButton');
-                javascript:CodeBox('RadioButton','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - RadioButton');javascript:CodeBox('Template1','_box1');javascript:CodeBox('RadioButton','_box2');">
           ・RadioButton</a>
-        <a href="javascript:ChangeTitle('c_title','Control - TextBox');
-                javascript:CodeBox('TextBox','code1');">
+        <a href="javascript:ChangeTitle('c_title','Control - TextBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('TextBox','_box2');">
           ・TextBox</a>
     <div class="part">Text</div>
-        <a href="javascript:ChangeTitle('c_title','Text - Align');
-                javascript:CodeBox('Align','code1');">
+        <a href="javascript:ChangeTitle('c_title','Text - Align');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Align','_box2');">
           ・Align</a>
-        <a href="javascript:ChangeTitle('c_title','Text - Font');
-                javascript:CodeBox('Font','code1');">
+        <a href="javascript:ChangeTitle('c_title','Text - Font');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Font','_box2');">
           ・Font</a>
-        <a href="javascript:ChangeTitle('c_title','Text - Size');
-                javascript:CodeBox('Size','code1');">
+        <a href="javascript:ChangeTitle('c_title','Text - Size');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Size','_box2');">
           ・Size</a>
     <div class="part">Window</div>
-        <a href="javascript:ChangeTitle('c_title','Window - Create');
-                javascript:CodeBox('Create','code1');">
+        <a href="javascript:ChangeTitle('c_title','Window - Create');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Create','_box2');">
           ・Create</a> 
   </div>
 
