--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -25,28 +25,21 @@
       </tr>
     </table> 
     <hr>
-      <div id="_box1">
-      </div>
-      <div id="_box2">
-      </div>
+      <div id="_box1"></div>
+      <div id="_box2"></div>
+    <hr>
+      <div id="_1box"></div>
   </div>
 
   <div id="mySidebar" class="sidebar">
     <div class="part">Control</div>
-        <a href="javascript:ChangeTitle('c_title','Control - Button');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Button','_box2');">
-          ・Button</a>
-        <a href="javascript:ChangeTitle('c_title','Control - CheckBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('CheckBox','_box2');">
-          ・CheckBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - ComboBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('ComboBox','_box2');">
-          ・ComboBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - Label');javascript:CodeBox('Template1','_box1');javascript:CodeBox('Label','_box2');">
-          ・Label</a>
-        <a href="javascript:ChangeTitle('c_title','Control - ListBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('ListBox','_box2');">
-          ・ListBox</a>
-        <a href="javascript:ChangeTitle('c_title','Control - RadioButton');javascript:CodeBox('Template1','_box1');javascript:CodeBox('RadioButton','_box2');">
-          ・RadioButton</a>
-        <a href="javascript:ChangeTitle('c_title','Control - TextBox');javascript:CodeBox('Template1','_box1');javascript:CodeBox('TextBox','_box2');">
-          ・TextBox</a>
+        <a href="javascript:Show_Control_Button();">・Button</a>
+        <a href="javascript:Show_Control_CheckBox();">・CheckBox</a>
+        <a href="javascript:Show_Control_ComboBox();">・ComboBox</a>
+        <a href="javascript:Show_Control_Label();">・Label</a>
+        <a href="javascript:Show_Control_ListBox();">・ListBox</a>
+        <a href="javascript:Show_Control_RadioButton();">・RadioButton</a>
+        <a href="javascript:Show_Control_TextBox();">・TextBox</a>
   </div>
 
   <script src="content.js"></script>
