--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -19,9 +19,7 @@
         <td width="80%">
             <div id="c_title"><h3>C++ Win32</h3></div>
         </td>
-        <td width="15%">
-          <h3 align="right">C++ Win32</h3>
-        </td>
+        <td width="15%"><h3 align="right">C++ Win32</h3></td>
       </tr>
     </table> 
     <hr>
