--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                       <a class="dropdown-item" style="color: white;" href="knowledge/cpp-win32/index.html">C++ Win32</a>
                       <div class="dropdown-divider" style="color: white;"></div>
                       <a class="dropdown-item" style="color: white;" href="#java">Java</a>
+                      <a class="dropdown-item" style="color: white;" href="#java spigot">Java Spigot</a>
                     </div>
                   </li>
             </ul>
