--- a/index.html
+++ b/index.html
@@ -26,19 +26,26 @@
                 <li class="nav-item active">
                 <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#app">App</a>
-                    </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        App
+                    </a>
+                    <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" style="color: white;" href="app/calculator/calculator.html">Calculator</a>
+                    </div>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Programming
                     </a>
                     <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
-                      <a class="dropdown-item" style="color: white;" href="knowledge/cpp-win32/index.html">C++ Win32</a>
-                      <div class="dropdown-divider" style="color: white;"></div>
-                      <a class="dropdown-item" style="color: white;" href="#java">Java</a>
-                      <a class="dropdown-item" style="color: white;" href="#java spigot">Java Spigot</a>
+                        <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
+                        <a class="dropdown-item" style="color: white;" href="knowledge/cpp-win32/index.html">C++ Win32</a>
+                        <div class="dropdown-divider" style="color: white;"></div>
+                        <a class="dropdown-item" style="color: white;" href="#java">Java</a>
+                        <a class="dropdown-item" style="color: white;" href="#java spigot">Java Spigot</a>
+                        <div class="dropdown-divider" style="color: white;"></div>
+                        <a class="dropdown-item" style="color: white;" href="#javascript">Javascript</a>
                     </div>
                   </li>
             </ul>
