--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="dropdown-item" style="color: white;" href="#java">Java</a>
                         <a class="dropdown-item" style="color: white;" href="#java spigot">Java Spigot</a>
                         <div class="dropdown-divider" style="color: white;"></div>
-                        <a class="dropdown-item" style="color: white;" href="#javascript">Javascript</a>
+                        <a class="dropdown-item" style="color: white;" href="#">Javascript</a>
                     </div>
                   </li>
             </ul>
