--- a/knowledge/javascript/index.html
+++ b/knowledge/javascript/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <title>Calculator</title>
+    <title>Javascript</title>
   </head>
 <body>
   
@@ -17,9 +17,9 @@
           </center>
         </td>
         <td width="80%">
-            <div id="c_title"><h3>Calculator</h3></div>
+            <div id="c_title"><h3>Javascript</h3></div>
         </td>
-        <td width="15%"><h3 align="right">Calculator</h3></td>
+        <td width="15%"><h3 align="right">Javascript</h3></td>
       </tr>
     </table> 
     <hr>
@@ -45,7 +45,6 @@
           <a href="javascript:ShowOtoH();">・To Hexadecimal</a>
     </div>
 
-    <script src="../../js/myfunction.js"></script>
     <script src="calculator.js"></script>
     <script src="nav.js"></script>
 
