--- a/knowledge/javascript/index.html
+++ b/knowledge/javascript/index.html
@@ -45,7 +45,8 @@
           <a href="javascript:ShowOtoH();">・To Hexadecimal</a>
     </div>
 
-    <script src="calculator.js"></script>
+    <script src="../../js/myfunction.js"></script>
+    <script src="content.js"></script>
     <script src="nav.js"></script>
 
 </body>
