--- a/index.html
+++ b/index.html
@@ -1,87 +1,96 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-4.6.0.min.css">
-    <script type="module" src="js/deckdeckgo-highlight-code.esm.js"></script>
-    <title>Shiro Wiki</title>
-  </head>
-  <style>
-      body {
-          background-color: rgb(53, 49, 61);
-      }
-  </style>
-  <body id="page-top">
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Shiro Wiki</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        App
-                    </a>
-                    <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" style="color: white;" href="app/calculator/calculator.html">Calculator</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle js-scroll-trigger" href="#programming" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Programming
-                    </a>
-                    <div class="dropdown-menu bg-dark" style="opacity: 0.75;" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" style="color: white;" href="#c++">C++</a>
-                        <a class="dropdown-item" style="color: white;" href="knowledge/cpp-win32/index.html">C++ Win32</a>
-                        <div class="dropdown-divider" style="color: white;"></div>
-                        <a class="dropdown-item" style="color: white;" href="#java">Java</a>
-                        <a class="dropdown-item" style="color: white;" href="#java spigot">Java Spigot</a>
-                        <div class="dropdown-divider" style="color: white;"></div>
-                        <a class="dropdown-item" style="color: white;" href="#">Javascript</a>
-                    </div>
-                  </li>
-            </ul>
-            </div>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Shiro Wiki</title>
+    </head>
+    <style>   
+        body {
+            background-color: rgb(53, 49, 61);
+        }
+        h1 {
+            font-size:2.5rem;
+        }
+        h5 {
+            font-size: 1.25rem;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 0;
+            margin-bottom: .5rem;
+            font-weight: 500;
+            line-height: 1.2;
+        }
+        .text {
+            font-family: 'Segoe UI';
+            font-weight: 500;
+            text-shadow: 2px 2px 4px #000000;
+        }
+        body {
+            background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/43/24/lwTb0a.jpg");
+            background-attachment: fixed;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            height:100%;
+            width:100%;
+        }
+        .form1 {
+            background: rgba(37, 37, 37, 0.5);
+            position: absolute;
+            padding: 10px 10px 10px 10px;
+            margin-left:10%;
+            margin-right:10%;
+            margin-top:5%;
+            margin-bottom:5%;
+            width: 80%;
+            height: 80%;
+            border-radius: 30px;
+            font-family: 'Segoe UI';
+        }
+        .home-content {
+            text-align: center;
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translateX(-50%) translateY(-50%);
+            color: white;
+        }
+        .home-footer {
+            position: absolute;
+            top:95%;
+            left:50%;
+            transform: translateX(-50%) translateY(-95%);
+        }
+        .white-text{
+            color: white;
+        }
+        button {
+            background-color: rgba(255, 255, 255, 0.5);
+            padding: 5px;
+            padding-left: 20px;
+            padding-right: 20px;
+            font-size:20px;
+            font-weight: 500;
+            border-radius: 15px;
+            outline:none;
+            cursor: pointer;
+            box-shadow: 2px 2px 4px #000000;;
+        }
+    </style>
+    <body>
+
+        <div class="home-content">
+            <h1 class="text">Shiro Wiki</h1>
+            <h5 class="text">Wiki for store knowledge</h5><br>
+            <a href="menu/index.html"><button>Open Wiki</button></a>
         </div>
-    </nav>
 
-    <div class="home-content">
-        <h1 style="text-shadow: 2px 2px 4px #000000;">Shiro Wiki</h1>
-        <h5 style="text-shadow: 2px 2px 4px #000000;">Wiki for store knowledge</h5>
-    </div>
+        <div class="home-footer">
+            <img src="images/csharp128.png" width=50px/>
+            <img src="images/c++128.png" width=50px/>
+            <img src="images/java128.png" width=50px/>
+        </div>   
 
-    <div class="home-footer">
-        <img src="images/csharp128.png" width=50px/>
-        <img src="images/c++128.png" width=50px/>
-        <img src="images/java128.png" width=50px/>
-    </div>   
-<!--
-    <div class="form1">
-        <deckgo-highlight-code language="cpp">
-            <code slot="code">
-#include &#60;iostream&#62;
-using namespace std;
-int main(){
-    cout << "Shiro Wiki" << endl;
-    cout << "Coming Soon" << endl;
-    return 0;
-}
-            </code>
-        </deckgo-highlight-code>
-    </div>
--->
-
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <script src="js/popper-1.16.1.min.js"></script>
-    <script src="js/bootstrap-4.6.0.min.js"></script>
-
-  </body>
+    </body>
 </html>
