--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <img src="images/csharp128.png" width=50px/>
             <img src="images/c++128.png" width=50px/>
             <img src="images/java128.png" width=50px/>
+            <img src="images/java-spigot128.png" width=50px/>
+            <img src="images/discord-js128.png" width=50px/>
         </div>   
 
     </body>
