--- a/menu/index.html
+++ b/menu/index.html
@@ -14,7 +14,7 @@
             <div class="column">
               <a href="#">
                 <div class="card">
-                  <img src="../images/c++128.png"/>
+                  <img src="../images/c++128.png" width="96px"/>
                   <p>C++</p>
                 </div>
               </a>
@@ -23,7 +23,7 @@
             <div class="column">
               <a href="../knowledge/cpp-win32/index.html">
                 <div class="card">
-                  <img src="../images/c++128.png"/>
+                  <img src="../images/c++128.png" width="96px"/>
                   <p>C++ Win32</p>
                 </div>
               </a>
@@ -32,7 +32,7 @@
             <div class="column">
               <a href="#">
                 <div class="card">
-                  <img src="../images/csharp128.png"/>
+                  <img src="../images/csharp128.png" width="96px"/>
                   <p>C#</p>
                 </div>
               </a>
@@ -41,7 +41,7 @@
             <div class="column">
               <a href="#">
                 <div class="card">
-                  <img src="../images/java128.png"/>
+                  <img src="../images/java128.png" width="96px"/>
                   <p>Java</p>
                 </div>
               </a>
@@ -50,7 +50,7 @@
             <div class="column">
               <a href="#">
                 <div class="card">
-                  <img src="../images/java-spigot128.png"/>
+                  <img src="../images/java-spigot128.png" width="96px"/>
                   <p>Java Spigot</p>
                 </div>
               </a>
@@ -59,7 +59,7 @@
             <div class="column">
               <a href="#">
                 <div class="card">
-                  <img src="../images/discord-js128.png"/>
+                  <img src="../images/discord-js128.png" width="96px"/>
                   <p>Discord JS</p>
                 </div>
               </a>
