--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -23,10 +23,7 @@
       </tr>
     </table> 
     <hr>
-      <div id="_box1"></div>
-      <div id="_box2"></div>
-    <hr>
-      <div id="_1box"></div>
+      <div id="box"></div>
   </div>
 
   <div id="mySidebar" class="sidebar">
@@ -40,6 +37,7 @@
         <a href="javascript:Show_Control_TextBox();">・TextBox</a>
   </div>
 
+  <script src="../../js/myfunction.js"></script>
   <script src="content.js"></script>
   <script src="nav.js"></script>
    
