--- a/menu/index.html
+++ b/menu/index.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="column">
-              <a href="#">
+              <a href="../knowledge/javascript/index.html">
                 <div class="card">
                   <img src="../images/java-spigot128.png" width="96px"/>
                   <p>Java Spigot</p>
@@ -56,6 +56,15 @@
               </a>
             </div>
           
+            <div class="column">
+              <a href="#">
+                <div class="card">
+                  <img src="../images/javascript128.png" width="96px"/>
+                  <p>Javascript</p>
+                </div>
+              </a>
+            </div>
+
             <div class="column">
               <a href="#">
                 <div class="card">
