--- a/knowledge/cpp-win32/index.html
+++ b/knowledge/cpp-win32/index.html
@@ -33,6 +33,7 @@
         <a href="javascript:Show_Control_ComboBox();">・ComboBox</a>
         <a href="javascript:Show_Control_Label();">・Label</a>
         <a href="javascript:Show_Control_ListBox();">・ListBox</a>
+        <a href="javascript:Show_Control_ProgressBar();">・ProgressBar</a>
         <a href="javascript:Show_Control_RadioButton();">・RadioButton</a>
         <a href="javascript:Show_Control_TextBox();">・TextBox</a>
   </div>
