--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
             cursor: pointer;
             box-shadow: 2px 2px 4px #000000;;
         }
+        audio {
+            display: none;
+        }
     </style>
     <body>
-
         <div class="home-content">
+            <audio controls autoplay loop hidden>
+                <source src="http://docs.google.com/uc?export=open&id=1CAUmx-D0MEk--mHQgIhMLKrfnqpEcBUS" type="audio/mpeg">
+            </audio>
             <h1 class="text">Shiro Wiki</h1>
             <h5 class="text">Wiki for store knowledge</h5><br>
             <a href="menu/index.html"><button>Open Wiki</button></a>
