--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
     </style>
     <body>
         <div class="home-content">
-            <audio controls autoplay loop hidden>
-                <source src="http://docs.google.com/uc?export=open&id=1CAUmx-D0MEk--mHQgIhMLKrfnqpEcBUS" type="audio/mpeg">
-            </audio>
+            <audio autoplay loop src="http://docs.google.com/uc?export=open&id=1CAUmx-D0MEk--mHQgIhMLKrfnqpEcBUS"></audio>
             <h1 class="text">Shiro Wiki</h1>
             <h5 class="text">Wiki for store knowledge</h5><br>
             <a href="menu/index.html"><button>Open Wiki</button></a>
