--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             text-shadow: 2px 2px 4px #000000;
         }
         body {
-            background-image:url("https://img.wallpapersafari.com/tablet/2560/1700/43/24/lwTb0a.jpg");
+            background-image:url("images/background.png");
             background-attachment: fixed;
             background-size: cover;
             background-repeat: no-repeat;
